[package]
name = "bevy_utilitarian"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbrea-c/bevy_utilitarian"
description = "A collection of mostly maths, interpolation and geometric utilities that aim to make Bevy programmers happier"
keywords = ["bevy", "gamedev", "utility", "interpolation", "math"]

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
bevy = { version = "0.12.0", default-features = false, features = [
    "bevy_render",
] }
rand = "0.8.5"
