[package]
name = "bevy_utilitarian"
version = "0.7.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbrea-c/bevy_utilitarian"
description = "A collection of mostly maths, interpolation and geometric utilities that aim to make Bevy programmers happier"
keywords = ["bevy", "gamedev", "utility", "interpolation", "math"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bevy = { version = "0.16", default-features = false, features = [
    "bevy_render",
] }
rand = "0.9.1"
